Switch to built-in node instead of controller
The comment about running Scriptler scripts on the controller is
somewhat incorrect and we should be talking about running on the built-
in node instead. Make this change, as well as in the configuration data.